# evaluate

./: .gitignore  Cargo.toml  README.md  evaluate.d.ts  evaluate.js  evaluate_bg.wasm  index.html  index.js  package.json
.github/workflows/: main.yml
src/: lib.rs
wasm/: README.md  package.json  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
