[package]
name = "evaluate"
version = "0.1.0"
authors = ["Grant Handy <grantshandy@gmail.com>"]
description = "evaluate linear equations"
license = "GPL-3.0"
repository = "https://github.com/skylinecc/textrip"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
xxcalc = "0.2.1"
